--- a/src/main/resources/assets/magicpab/lang/en_US.lang
+++ b/src/main/resources/assets/magicpab/lang/en_US.lang
@@ -11,7 +11,10 @@ tile.magicpab.pyrite_ore.name=Pyrite Ore
 tile.magicpab.topaz_ore.name=Topaz Ore
 tile.magicpab.pyrite_block.name=Pyrite Block
 
-item.magicpab.copper_flask_component=Copper Flask Component
-item.magicpab.pyrite_infused_glass=Pyrite Infused Glass
+item.magicpab.copper_flask_component.name=Copper Flask Component
+item.magicpab.iron_flask_component.name=Iron Flask Component
+item.magicpab.gold_flask_component.name=Gold Flask Component
+
+item.magicpab.pyrite_glass_block.name=Pyrite Infused Glass
 
 itemGroup.ngCreativeTab=Magical Potions and Brews
