fixes and additions to flask functionality
Flasks are useable, added tcon integration

--- a/src/main/resources/assets/magicpab/lang/en_US.lang
+++ b/src/main/resources/assets/magicpab/lang/en_US.lang
@@ -5,20 +5,23 @@ item.magicpab.pyrite_shard.name=Pyrite Shard
 item.magicpab.topaz_gem.name=Topaz
 item.magicpab.potion_flask.name=Flask
 
+item.magicpab.potion_mock.name=Mock item: DO NOT Use
+item.magicpab.component_mock.name=Mock item: DO NOT Use
+
 tile.magicpab.copper_ore.name=Copper Ore
 tile.magicpab.nickel_ore.name=Nickel Ore
 tile.magicpab.pyrite_ore.name=Pyrite Ore
 tile.magicpab.topaz_ore.name=Topaz Ore
 tile.magicpab.pyrite_block.name=Pyrite Block
+tile.magicpab.pyrite_glass_block.name=Pyrite Infused Glass
 
-fluid.magicpab.pyrite=Molten Pyrite
+
 
 fluid.magicpab.pyrite.name=Molten Pyrite
+fluid.magicpab.pyrite=Molten Pyrite
 
 item.magicpab.copper_flask_component.name=Copper Flask Component
 item.magicpab.iron_flask_component.name=Iron Flask Component
 item.magicpab.gold_flask_component.name=Gold Flask Component
-
-item.magicpab.pyrite_glass_block.name=Pyrite Infused Glass
 
 itemGroup.ngCreativeTab=Magical Potions and Brews
