--- a/src/main/resources/assets/magicpab/lang/en_US.lang
+++ b/src/main/resources/assets/magicpab/lang/en_US.lang
@@ -16,7 +16,7 @@ tile.magicpab.pyrite_block.name=Pyrite Block
 
 tile.magicpab.pyrite_infused_glass_block.name=Pyrite Infused Glass
 tile.magicpab.diamond_infused_glass_block.name=Diamond Infused Glass
-
+tile.magicpab.emerald_infused_glass_block.name=Emerald Infused Glass
 
 
 fluid.magicpab.pyrite.name=Molten Pyrite
