--- a/src/main/resources/assets/magicpab/lang/en_US.lang
+++ b/src/main/resources/assets/magicpab/lang/en_US.lang
@@ -22,12 +22,12 @@ tile.magicpab.emerald_infused_glass_block.name=Emerald Infused Glass
 fluid.magicpab.pyrite.name=Molten Pyrite
 fluid.magicpab.pyrite=Molten Pyrite
 
-item.magicpab.copper_flask_component.name=Copper Flask Component
-item.magicpab.iron_flask_component.name=Iron Flask Component
-item.magicpab.gold_flask_component.name=Gold Flask Component
-item.magicpab.diamond_flask_component.name=Diamond Flask Component
-item.magicpab.starsteel_flask_component.name=Starsteel Flask Component
-item.magicpab.fyrestone_flask_component.name=Fyrestone Flask Component
-item.magicpab.earthstone_flask_component.name=Earthstone Flask Component
+item.magicpab.copper_flask_component.name=Copper Flask Cap
+item.magicpab.iron_flask_component.name=Iron Flask Cap
+item.magicpab.gold_flask_component.name=Gold Flask Cap
+item.magicpab.diamond_flask_component.name=Diamond Flask Cap
+item.magicpab.starsteel_flask_component.name=Starsteel Flask Cap
+item.magicpab.fyrestone_flask_component.name=Fyrestone Flask Cap
+item.magicpab.earthstone_flask_component.name=Earthstone Flask Cap
 
-itemGroup.ngCreativeTab=Magical Potions and Brews
+itemGroup.ngCreativeTab=Alchemy Trinkets
