Start of in game book

--- a/src/main/resources/assets/magicpab/lang/en_US.lang
+++ b/src/main/resources/assets/magicpab/lang/en_US.lang
@@ -31,3 +31,5 @@ item.magicpab.fyrestone_flask_component.name=Fyrestone Flask Cap
 item.magicpab.earthstone_flask_component.name=Earthstone Flask Cap
 
 itemGroup.ngCreativeTab=Alchemy Trinkets
+
+magicpab.book.alchemy_book.intro.title=Alchemy Trinkets
